# fa_helloworld

./: .gitignore  README.md  main.py  pyproject.toml  test.db
app/: crud.py  database.py  db_models.py  dependencies.py  main.py  models.py  pydantic_models.py  schemas.py  test_main.py
app/routers/: customers.py  hotels_chef.py  it_comp.py  items.py  test_It_comp.py  test_customers.py  test_hotel_chef.py  test_items.py  test_usermgt.py  test_users.py  tutorialspoint.py  usermanagement.py  usermgt.py  users.py
models/: blog.py
templates/: hello.html
